fix: tablet bikes layout, mobile title size, mobile footer z-index

--- a/src/styles/blocks/compare-bikes.scss
+++ b/src/styles/blocks/compare-bikes.scss
@@ -14,7 +14,7 @@
     gap: 40px;
 
     @media (min-width: $tablet-min-width) {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: 1fr;
       gap: 24px;
     }
 
