--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -11,11 +11,8 @@
 
 
   @media (max-width: 560px) {
-    padding-bottom: 200px;
     height: 100px;
-    margin-top: 250px;
-    
-}
+  }
 
   @media (min-width: $desktop-min-width) {
     padding-bottom: 0;
