--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -27,7 +27,7 @@
     margin: 0;
     text-align: center;
     font-weight: 700;
-    font-size: 80px;
+    font-size: 48px;
     line-height: 100%;
     letter-spacing: -1.5px;
 
